--- a/docs/ReatMetric System Manual.adoc
+++ b/docs/ReatMetric System Manual.adoc
@@ -1,4 +1,4 @@
-= ReatMetric Design & Concepts
+= ReatMetric System Manual
 Dario Lucia <dario.lucia@gmail.com>
 :toc:
 :homepage: https://github.com/dariol83/reatmetric
@@ -312,9 +312,7 @@ include::../eu.dariolucia.reatmetric.driver.spacecraft/Documentation.adoc[]
 include::../eu.dariolucia.reatmetric.driver.serial/Documentation.adoc[]
 
 == User Interface
-=== Overview
-=== Configuration
-To be written
+include::../eu.dariolucia.reatmetric.ui/Documentation.adoc[]
 
 == Extending ReatMetric
 
