--- a/eu.dariolucia.reatmetric.driver.socket/Documentation.adoc
+++ b/eu.dariolucia.reatmetric.driver.socket/Documentation.adoc
@@ -551,4 +551,257 @@ for the execution stage. It is possible for an outbound message to have both acc
 acceptance, only execution or no verification element.
 
 ===== Main Configuration File - Binary
+An example of configuration file modelling a binary protocol is presented below.
 
+[source,xml]
+----
+<ns1:socket xmlns:ns1="http://dariolucia.eu/reatmetric/driver/socket"
+    name="Single Binary"
+    description="Driver configuration for single Binary TCP connection">
+    <connections>
+        <tcp name="Device TC TCP Connection" source="Device 4" protocol="BINARY" init="CONNECTOR"
+             host="127.0.0.1" remote-port="37280" local-port="0" >
+            <lengthFieldDecoding header-nb-bytes-to-skip="4" field-length="4" big-endian="true"
+                                 consider-skipped-bytes="true" consider-field-length="true" />
+            <route name="Device 4 Route" entity-offset="0" command-lock="false">
+                <activity-types>
+                    <type>DEV4-BIN-CMD</type>
+                </activity-types>
+                <!-- Common -->
+                <inbound id="ACK_POS_IN" message="CMD_DEFINITION" secondary-id="ACK_POS" />
+                <inbound id="ACK_NEG_IN" message="CMD_DEFINITION" secondary-id="ACK_NEG" />
+                <inbound id="EXE_POS_IN" message="CMD_DEFINITION" secondary-id="EXE_POS" />
+                <inbound id="EXE_NEG_IN" message="CMD_DEFINITION" secondary-id="EXE_NEG" />
+                <inbound id="NOK_IN" message="CMD_DEFINITION" secondary-id="CMD_NOK" />
+
+                <!-- TM First Subsystem -->
+                <inbound id="TLM_SUB1_MP" message="CMD_DEFINITION" secondary-id="TLM_SUB1">
+                    <inject name="status_val" entity="170" />
+                    <inject name="freq_val" entity="171" />
+                    <inject name="temp_val" entity="172" />
+                    <inject name="offset_val" entity="173" />
+                    <inject name="mode_val" entity="174" />
+                    <inject name="summary_val" entity="175" />
+                    <inject name="sweep_val" entity="176" />
+                </inbound>
+                <!-- TM Second Subsystem -->
+                <inbound id="TLM_SUB2_MP" message="CMD_DEFINITION" secondary-id="TLM_SUB2">
+                    <inject name="status_val" entity="180" />
+                    <inject name="freq_val" entity="181" />
+                    <inject name="temp_val" entity="182" />
+                    <inject name="offset_val" entity="183" />
+                    <inject name="mode_val" entity="184" />
+                    <inject name="summary_val" entity="185" />
+                    <inject name="sweep_val" entity="186" />
+                </inbound>
+
+                <!-- EVT First Subsystem -->
+                <inbound id="EVT_SUB1_MP" message="CMD_DEFINITION" secondary-id="EVT_SUB1">
+                    <raise entity="200" source="Device 4" qualifier-reference="message_val">
+                        <condition field="alarm_val" value="0" type="ENUMERATED" />
+                    </raise>
+                    <raise entity="201" source="Device 4" qualifier-reference="message_val">
+                        <condition field="alarm_val" value="1" type="ENUMERATED" />
+                    </raise>
+                    <raise entity="202" source="Device 4" qualifier-reference="message_val">
+                        <condition field="alarm_val" value="2" type="ENUMERATED" />
+                    </raise>
+                    <raise entity="203" source="Device 4" qualifier-reference="message_val">
+                        <condition field="alarm_val" value="3" type="ENUMERATED" />
+                    </raise>
+                </inbound>
+                <!-- EVT Second Subsystem -->
+                <inbound id="EVT_SUB2_MP" message="CMD_DEFINITION" secondary-id="EVT_SUB2">
+                    <raise entity="300" source="Device 4" qualifier-reference="message_val" />
+                </inbound>
+
+                <!-- TM Subsystem Registration -->
+                <outbound id="POLL_SUB1_MP" message="CMD_DEFINITION" secondary-id="POLL_SUB" type="CONNECTION_ACTIVE">
+                    <fixed-field field="device_subsystem" value="1" type="UNSIGNED_INTEGER" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <verification timeout="6" id-field="request">
+                        <execution message="CMD_DEFINITION" secondary-id="TLM_SUB1" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="TLM_SUB1_NOK" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+                <outbound id="POLL_SUB2_MP" message="CMD_DEFINITION" secondary-id="POLL_SUB" type="CONNECTION_ACTIVE">
+                    <fixed-field field="device_subsystem" value="2" type="UNSIGNED_INTEGER" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <verification timeout="6" id-field="request">
+                        <execution message="CMD_DEFINITION" secondary-id="TLM_SUB2" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="TLM_SUB2_NOK" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+
+                <!-- EVT Subsystem Registration -->
+                <outbound id="EVT_SUB1_MP" message="CMD_DEFINITION" secondary-id="EVT_SUB" type="CONNECTION_ACTIVE">
+                    <fixed-field field="device_subsystem" value="1" type="UNSIGNED_INTEGER" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <verification timeout="6" id-field="request" >
+                        <execution message="CMD_DEFINITION" secondary-id="EVT_SUB1" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="EVT_SUB1_NOK" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+                <outbound id="EVT_SUB2_MP" message="CMD_DEFINITION" secondary-id="EVT_SUB" type="CONNECTION_ACTIVE">
+                    <fixed-field field="device_subsystem" value="2" type="UNSIGNED_INTEGER" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <verification timeout="6" id-field="request">
+                        <execution message="CMD_DEFINITION" secondary-id="EVT_SUB2" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="EVT_SUB2_NOK" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+
+                <!-- Common -->
+                <outbound id="SET_MP_LONG" message="CMD_DEFINITION" secondary-id="CMD_SET_LONG" type="ACTIVITY_DRIVEN" entity="103">
+                    <!-- Not needed, can go in the definition, used for testing-->
+                    <fixed-field field="length" value="36" type="UNSIGNED_INTEGER" />
+                    <argument name="device_subsystem" field="device_subsystem" />
+                    <argument name="parameter" field="parameter" />
+                    <argument name="new_value" field="new_value" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <verification timeout="10" id-field="request">
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_POS" id-field="request" result="OK" />
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_POS" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+                <outbound id="SET_MP_INT" message="CMD_DEFINITION" secondary-id="CMD_SET_INT" type="ACTIVITY_DRIVEN" entity="104">
+                    <fixed-field field="length" value="32" type="UNSIGNED_INTEGER" />
+                    <argument name="device_subsystem" field="device_subsystem" />
+                    <argument name="parameter" field="parameter" />
+                    <argument name="new_value" field="new_value" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <verification timeout="10" id-field="request">
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_POS" id-field="request" result="OK" />
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_POS" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+                <outbound id="SET_MP_DOUBLE" message="CMD_DEFINITION" secondary-id="CMD_SET_DOUBLE" type="ACTIVITY_DRIVEN" entity="105">
+                    <fixed-field field="length" value="36" type="UNSIGNED_INTEGER" />
+                    <argument name="device_subsystem" field="device_subsystem" />
+                    <argument name="parameter" field="parameter" />
+                    <argument name="new_value" field="new_value" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <verification timeout="10" id-field="request">
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_POS" id-field="request" result="OK" />
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_POS" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+                <outbound id="SET_MP_PSTRING" message="CMD_DEFINITION" secondary-id="CMD_SET_PSTRING" type="ACTIVITY_DRIVEN" entity="106">
+                    <argument name="device_subsystem" field="device_subsystem" />
+                    <argument name="parameter" field="parameter" />
+                    <argument name="new_value" field="new_value" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <!-- Declaration order matters -->
+                    <computed-field field="length">
+                        return 28 + 4 + ((String) new_value).length();
+                    </computed-field>
+                    <computed-field field="new_value_length">
+                        return ((String) new_value).length();
+                    </computed-field>
+                    <verification timeout="10" id-field="request">
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_POS" id-field="request" result="OK" />
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_POS" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+                <!-- First Subsystem -->
+                <outbound id="CMD_SUB1_RST_MP" message="CMD_DEFINITION" secondary-id="CMD_RST" type="ACTIVITY_DRIVEN" entity="177">
+                    <fixed-field field="device_subsystem" value="1" type="UNSIGNED_INTEGER" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <verification timeout="10" id-field="request">
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_POS" id-field="request" result="OK" />
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_POS" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+                <outbound id="CMD_SUB1_SWP_MP" message="CMD_DEFINITION" secondary-id="CMD_SWP" type="ACTIVITY_DRIVEN" entity="178">
+                    <fixed-field field="device_subsystem" value="1" type="UNSIGNED_INTEGER" />
+                    <argument name="times" field="times" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <verification timeout="10" id-field="request">
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_POS" id-field="request" result="OK" />
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_POS" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+                <outbound id="CMD_SUB1_RBT_MP" message="CMD_DEFINITION" secondary-id="CMD_RBT" type="ACTIVITY_DRIVEN" entity="179">
+                    <fixed-field field="device_subsystem" value="1" type="UNSIGNED_INTEGER" />
+                    <argument name="delay" field="delay" />
+                    <argument name="running" field="running" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <verification timeout="10" id-field="request">
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_POS" id-field="request" result="OK" />
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_POS" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+                <!-- Second Subsystem -->
+                <outbound id="CMD_SUB2_RST_MP" message="CMD_DEFINITION" secondary-id="CMD_RST" type="ACTIVITY_DRIVEN" entity="187">
+                    <fixed-field field="device_subsystem" value="2" type="UNSIGNED_INTEGER" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <verification timeout="10" id-field="request">
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_POS" id-field="request" result="OK" />
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_POS" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+                <outbound id="CMD_SUB2_SWP_MP" message="CMD_DEFINITION" secondary-id="CMD_SWP" type="ACTIVITY_DRIVEN" entity="188">
+                    <fixed-field field="device_subsystem" value="2" type="UNSIGNED_INTEGER" />
+                    <argument name="times" field="times" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <verification timeout="10" id-field="request">
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_POS" id-field="request" result="OK" />
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_POS" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+                <outbound id="CMD_SUB2_RBT_MP" message="CMD_DEFINITION" secondary-id="CMD_RBT" type="ACTIVITY_DRIVEN" entity="189">
+                    <fixed-field field="device_subsystem" value="2" type="UNSIGNED_INTEGER" />
+                    <argument name="delay" field="delay" />
+                    <argument name="running" field="running" />
+                    <auto-increment counter-id="SEQ1" field="request" output-type="UNSIGNED_INTEGER"/>
+                    <verification timeout="10" id-field="request">
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_POS" id-field="request" result="OK" />
+                        <acceptance message="CMD_DEFINITION" secondary-id="ACK_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_POS" id-field="request" result="OK" />
+                        <execution message="CMD_DEFINITION" secondary-id="EXE_NEG" id-field="request" result="FAIL" />
+                        <execution message="CMD_DEFINITION" secondary-id="CMD_NOK" result="FAIL" />
+                    </verification>
+                </outbound>
+            </route>
+        </tcp>
+    </connections>
+    <messages>
+        <binary id="CMD_DEFINITION" location="binary_single_messages.xml">
+            <type-marker>DEV4-BIN-CMD</type-marker>
+        </binary>
+    </messages>
+</ns1:socket>
+----
+
+Other example configuration are provided in the test resources of the eu.dariolucia.reatmetric.driver.socket module.
